# mspm0g3507_framework

./: .clang-format  .clangd  .gitattributes  .gitignore  404.html  CMakeLists.txt  README.md  agent_prompt_vib_motor.md  flash_mgr_workbench_prompt.md  framework.syscfg  index.html  mkdocs.yml  pyocd.yaml  sitemap.xml  vib_motor_gpio_agent_prompt(1).md  引脚.txt  物料链接.txt
device/: CMakeLists.txt  product.json
lib/: CMakeLists.txt
lib/RTT/: CMakeLists.txt
lib/freertos/: CMakeLists.txt
lib/lfs/: CMakeLists.txt
lib/local_lib/: CMakeLists.txt  local_lib.c  local_lib.h  lvgl_stubs.c
lib/local_lib/bool_compat/: bool.h
lib/local_lib/freertos_alloc/: freertos_alloc.h
lib/local_lib/general_data/: general_data.c  general_data.h
lib/local_lib/protocol/: protocol.c  protocol.h  protocol_7d7e.c  protocol_binary.c  protocol_none.c
lib/local_lib/soft_crc/: soft_crc.c  soft_crc.h
lib/local_lib/vector/: vector.c  vector.h
lib/lvgl/: CMakeLists.txt
lib/wiznet/: CMakeLists.txt
lib/wiznet/Ethernet/: socket.c  wizchip_conf.h
src/app/: CMakeLists.txt  app.c  app.h  main.c
src/app/air_battle/: air_assets.c  air_assets.h  air_battle.c  air_battle.h
src/app/audio_player/: audio_player.c  audio_player.h
src/app/breakout/: breakout.c
src/app/com_uart_test/: com_uart_test.c  com_uart_test.h
src/app/flash_mgr/: flash_mgr.c  flash_mgr.h
src/app/game_2048/: game_2048.c  game_2048.h
src/app/game_assets/: info_image_hitsz.h  info_image_oooshuo.h  info_image_polaris.h
src/app/game_console/: game_console.c  game_console.h  game_control_hint.c  game_control_hint.h  game_entries.inc  game_graphics.c  game_graphics.h  game_info_screen.c  game_info_screen.h  game_info_text.c  game_info_text.h  game_over_menu.c  game_over_menu.h  game_registry.c  game_registry.h  game_runtime.c  game_runtime.h  score_store.c  score_store.h  screensaver.c  screensaver.h
src/app/games/: air_battle.c  bad_apple.c  calculator.c  fps_test.c  gomoku.c  info.c  maze.c  needle.c  pong.c  rhythm.c  sfx_lib.c  tank_battle.c
src/app/gomoku/: gomoku.c
src/app/image_asset/: image_asset.c  image_asset.h
src/app/lcd_test/: lcd_test.c  lcd_test.h
src/app/lfs_port/: lfs_port.c  lfs_port.h
src/app/lfs_test/: lfs_test.c  lfs_test.h
src/app/low_knight/: low_knight.c  low_knight.h  low_knight_resources.c  low_knight_resources.h  low_knight_runtime.c  low_knight_runtime.h
src/app/lvgl_ball/: lvgl_ball.c  lvgl_ball.h
src/app/lvgl_hello/: lvgl_hello.c  lvgl_hello.h
src/app/pacman/: pacman.c  pacman.h
src/app/pong/: pong.c
src/app/racing/: racing.c  racing.h
src/app/rtt_test/: rtt_test.c  rtt_test.h
src/app/slip_recv/: slip_recv.c
src/app/snake/: snake.c  snake.h
src/app/st7789_img_test/: st7789_img_test.c  st7789_img_test.h
src/app/storage/: storage.c  storage.h
src/app/tank_battle/: tank_battle.c  tank_battle.h
src/app/tetris/: tetris.c  tetris.h
src/app/video/: badapple_builtin_video.h  badapple_video.c  badapple_video.h
src/app/video_player/: video_asset.c  video_asset.h  video_player.c  video_player.h
src/app/w25q32_test/: w25q32_test.c  w25q32_test.h
src/bsp/: CMakeLists.txt  bsp.c  bsp.h
src/bsp/adc/: bsp_adc.c  bsp_adc.h
src/bsp/audio/: bsp_audio.c  bsp_audio.h
src/bsp/gpio/: bsp_gpio.c  bsp_gpio.h
src/bsp/log/: bsp_log.c  bsp_log.h
src/bsp/pwm/: bsp_pwm.c  bsp_pwm.h
src/bsp/rz/: bsp_rz.c  bsp_rz.h
src/bsp/soft_spi/: bsp_soft_spi.c  bsp_soft_spi.h
src/bsp/spi/: bsp_spi.c  bsp_spi.h
src/bsp/time/: bsp_time.c  bsp_time.h
src/bsp/uart/: bsp_uart.c  bsp_uart.h
src/hal/: CMakeLists.txt  hal.c  hal.h
src/hal/button/: button.c  button.h
src/hal/buzzer/: buzzer.c  buzzer.h  buzzer_def.c  buzzer_def.c.bak  synth.c  synth.h  synth_songs.c
src/hal/com_uart/: com_uart.c  com_uart.h
src/hal/com_udp/: com_udp.c  com_udp.h
src/hal/joystick/: joystick.c  joystick.h
src/hal/lcd/: lcd.c  lcd.h  lcd_color_sweep.c  lcd_color_sweep.h  lcd_init.c  lcd_init.h  lcd_video_delta_data.h  lcd_video_player.c  lcd_video_player.h  zk.c
src/hal/led_breath/: led_breath.c  led_breath.h
src/hal/led_simple/: led_simple.c  led_simple.h
src/hal/st7789/: st7789.c  st7789.h  st7789_def.h
src/hal/vib_motor/: vib_motor.c  vib_motor.h
src/hal/vib_motor_gpio/: vib_motor_gpio.c  vib_motor_gpio.h
src/hal/vib_motor_pwm/: vib_motor_pwm.c  vib_motor_pwm.h
src/hal/w25q32/: w25q32.c  w25q32.h  w25q32_def.h
src/hal/w5500/: w5500_hal.c  w5500_hal.h
src/hal/ws2812/: ws2812.c  ws2812.h
src/lib/: CMakeLists.txt
src/platform/: CMakeLists.txt  platform.h  platform_arm.c  platform_vm.c
src/syscall/: CMakeLists.txt  retarget.c  retarget.h  rtt_log.h
src/test/: CMakeLists.txt  test.c  test.h
src/test/button/: test_button.c  test_button.h
src/test/buzzer/: test_buzzer.c  test_buzzer.h
src/test/com_uart/: test_com_uart.c  test_com_uart.h
src/test/com_uart_test/: com_uart_test.c  com_uart_test.h
src/test/joystick/: test_joystick.c  test_joystick.h
src/test/lcd/: test_lcd.c  test_lcd.h
src/test/lcd_test/: lcd_test.c  lcd_test.h
src/test/led_breath/: test_led_breath.c  test_led_breath.h
src/test/led_simple/: test_led_simple.c  test_led_simple.h
src/test/lfs/: test_lfs.c  test_lfs.h
src/test/lfs_test/: lfs_test.c  lfs_test.h
src/test/lvgl_ball/: lvgl_ball.c  lvgl_ball.h  test_lvgl_ball.c  test_lvgl_ball.h
src/test/lvgl_hello/: lvgl_hello.c  lvgl_hello.h  test_lvgl_hello.c  test_lvgl_hello.h
src/test/rtt/: test_rtt.c  test_rtt.h
src/test/rtt_test/: rtt_test.c  rtt_test.h
src/test/slip_recv/: slip_recv.c  slip_recv.h  test_slip_recv.c  test_slip_recv.h
src/test/st7789_img/: MizunoAkane100x100_img.c  MizunoAkane220x240_img.c  test_st7789_img.c  test_st7789_img.h
src/test/st7789_img_test/: MizunoAkane100x100.c  MizunoAkane220x240.c  st7789_img_test.c  st7789_img_test.h
src/test/vib_motor/: test_vib_motor.c  (+1 more)
src/vm/: CMakeLists.txt  audio_synth_vm.c  audio_synth_vm.h  display_vm.c  display_vm.h  haptics_vm.c  haptics_vm.h  input_vm.c  input_vm.h  lfs.h  lfs_vm_impl.c  main_vm.c  storage_vm.c
ti_device/: CMakeLists.txt  CMakeLists_device.txt
(+274 files in other folders)
